# test_task

./: CMakeLists.txt  main.cpp
datasets/: example_engine.json
models/engine/: base_engine.h  engine_assembler.h
models/engine/internal_combustion_engine/: internal_combustion_engine.cc  internal_combustion_engine.h  internal_combustion_engine_assembler.cc  internal_combustion_engine_assembler.h  internal_combustion_engine_parameters.h  linear_function.cc  linear_function.h
models/stand/: base_stand.h  max_power_stand.cc  max_power_stand.h  overheat_test_stand.cc  overheat_test_stand.h  runner.h
